--- a/config/enternal_config.ini
+++ b/config/enternal_config.ini
@@ -3,7 +3,7 @@
 ;All possible customization settings are shown below
 
 ;Options for custom groups
-custom_proxy_group=Proxy`select`.*`[]AUTO`[]DIRECT`.*
+custom_proxy_group=Proxy`select`.*`[]DIRECT`.*
 custom_proxy_group=HK`select`(港|香港|HK|Hong)
 custom_proxy_group=US`select`(美|美国|US)
 custom_proxy_group=Google`select`[]US`[]HK`[]DIRECT
@@ -26,10 +26,10 @@ custom_proxy_group=WeChat`select`[]DIRECT`[]US`[]HK
 custom_proxy_group=Telegram`select`[]HK`[]US
 custom_proxy_group=115P`select`[]DIRECT
 custom_proxy_group=China`select`[]DIRECT
-custom_proxy_group=AUTO`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=IP_TEST`select`[]US`[]HK`[]DIRECT`.*
 custom_proxy_group=Local`select`[]DIRECT
 custom_proxy_group=Final`select`[]Proxy`[]DIRECT
+;custom_proxy_group=AUTO`url-test`.*`http://www.gstatic.com/generate_204`300
 ;custom_proxy_group=!!import:snippets/groups_forcerule.txt
 
 ;Options for custom rulesets
