--- a/config/enternal_config.ini
+++ b/config/enternal_config.ini
@@ -26,9 +26,9 @@ custom_proxy_group=WeChat`select`[]DIRECT`[]US`[]HK
 custom_proxy_group=Telegram`select`[]HK`[]US
 custom_proxy_group=115P`select`[]DIRECT
 custom_proxy_group=China`select`[]DIRECT
-custom_proxy_group=IP_TEST`select`[]US`[]HK`[]DIRECT`.*
+custom_proxy_group=IP_TEST`select`[]Proxy`[]US`[]HK`[]DIRECT`.*
 custom_proxy_group=Local`select`[]DIRECT
-custom_proxy_group=Final`select`[]Proxy`[]DIRECT
+custom_proxy_group=Final`select`[]Proxy`[]US`[]HK`[]DIRECT
 ;custom_proxy_group=AUTO`url-test`.*`http://www.gstatic.com/generate_204`300
 ;custom_proxy_group=!!import:snippets/groups_forcerule.txt
 
