--- a/config/enternal_config.ini
+++ b/config/enternal_config.ini
@@ -13,6 +13,7 @@ custom_proxy_group=Apple`select`[]DIRECT`[]US`[]HK
 custom_proxy_group=Microsoft`select`[]US`[]HK`[]DIRECT
 custom_proxy_group=Gemini`select`[]US`[]HK
 custom_proxy_group=Twitter`select`[]US`[]HK`[]DIRECT
+custom_proxy_group=TradingView`select`[]HK`[]US`[]DIRECT
 custom_proxy_group=Binance`select`[]HK`[]US`[]DIRECT
 custom_proxy_group=OKX`select`[]HK`[]US`[]DIRECT
 custom_proxy_group=Netflix`select`[]US`[]HK
@@ -36,8 +37,6 @@ custom_proxy_group=Final`select`[]Proxy`[]US`[]HK`[]DIRECT
 enable_rule_generator=true
 overwrite_original_rules=true
 
-ruleset=IP_TEST,https://raw.githubusercontent.com/harryleee/rules/refs/heads/dev/rules/test_ip.list
-
 ruleset=115P,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/115/115.list
 ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=Notion,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Notion/Notion.list
@@ -58,7 +57,8 @@ ruleset=Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/mas
 ruleset=Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=Gemini,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
 ruleset=Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-
+ruleset=IP_TEST,https://raw.githubusercontent.com/harryleee/rules/refs/heads/dev/rules/test_ip.list
+ruleset=TradingView,https://raw.githubusercontent.com/harryleee/rules/refs/heads/dev/rules/tradingview.list
 ruleset=Local,https://raw.githubusercontent.com/harryleee/rules/refs/heads/dev/rules/local.list
 ruleset=China,[]GEOIP,CN
 ruleset=Final,[]FINAL
